--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 image: docker:latest
 
 services:
-  - docker:dind
+  - name: docker:dind
+    alias: docker
 
 variables:
   DOCKER_DRIVER: overlay2
@@ -13,13 +14,14 @@ stages:
   - push
 
 before_script:
-  # Voeg noodzakelijke systeemafhankelijkheden toe voor MySQL/MariaDB client
+  # Systeemafhankelijkheden voor Python en MySQL client
   - apk update
   - apk add --no-cache py3-pip python3-dev libffi-dev gcc libc-dev mariadb-dev
 
 build:
   stage: build
   script:
+    - echo "Verbinding testen met Docker daemon"
     - docker info
     - docker build --pull -t zierick03/discordbot:latest .
 
@@ -29,9 +31,11 @@ test:
     - python3 -m venv venv
     - . venv/bin/activate
     - pip install --upgrade pip
-    - pip install -r requirements.txt  # Zorg ervoor dat je requirements.txt het juiste bevat
+    - pip install -r requirements.txt
     - pip install pytest pytest-cov
-    #- pytest tests/ --junitxml=report.xml --cov=app  # Specificeer de locatie van tests
+    # - pytest tests/ --junitxml=report.xml --cov=app
+
+  # Optioneel: test coverage pattern
   coverage: '/TOTAL.*?(\d+\%)/'
 
 push:
@@ -39,6 +43,6 @@ push:
   only:
     - main
   script:
-    - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
-    - docker tag discordbot zierick03/discordbot:latest
+    - echo "Inloggen op Docker Hub"
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
     - docker push zierick03/discordbot:latest
