nieuw yml script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,25 @@
+image: docker:latest  # Gebruik een simpele Docker image
+
+services:
+  - docker:dind  # Docker-in-Docker service voor het uitvoeren van Docker-in-Docker
+
 stages:
   - build
   - push
 
 before_script:
-  # Docker login
+  # Inloggen op Docker Hub met gebruikersnaam en wachtwoord/token via de variabelen
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-
 
 build:
   stage: build
   script:
-    - docker build -t zierick03/discordbot:latest .
+    - docker build -t zierick03/discordbot:latest .  # Bouw de Docker image
+    - docker tag discordbot zierick03/discordbot:latest  # Tag de image met je Docker Hub repo
 
 push:
   stage: push
   only:
-    - main
+    - main  # Push alleen naar Docker Hub als de branch 'main' is
   script:
-    - docker push zierick03/discordbot:latest
+    - docker push zierick03/discordbot:latest  # Push de image naar Docker Hub
