--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,19 @@
-image: docker:latest
+image: python:3.11
 
 services:
   - docker:dind
 
-stages:
-  - test
-
 variables:
   DOCKER_DRIVER: overlay2
 
-test_login:
-  stage: test
+before_script:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
+stages:
+  - build
+
+build:
+  stage: build
   script:
-    - echo "USERNAME: $DOCKER_USERNAME"
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-#test
+    - python --version
+    - echo "Pipeline werkt!"
