--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,31 @@ services:
 
 variables:
   DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""  # belangrijk om TLS fouten te vermijden
+  DOCKER_TLS_CERTDIR: ""  # voorkomt TLS problemen bij dind
 
 before_script:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
 stages:
   - test
+  - build
+  - deploy
 
-test-docker:
+test:
   stage: test
   script:
     - docker info
+    - docker version
+
+build:
+  stage: build
+  script:
+    - docker build -t zierick03/discordbot:latest .
+    - docker images
+
+deploy:
+  stage: deploy
+  only:
+    - main  # alleen pushen vanaf de 'main' branch
+  script:
+    - docker push zierick03/discordbot:latest
