--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,28 +1,15 @@
-image: docker:latest
-
-services:
-  - name: docker:dind
-    alias: docker   # ← dit zorgt dat de hostnaam 'docker' werkt
-
-variables:
-  DOCKER_TLS_CERTDIR: ""
-  DOCKER_HOST: tcp://docker:2375
-  DOCKER_DRIVER: overlay2
-
-before_script:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
-
 stages:
   - build
   - deploy
 
+variables:
+  IMAGE: "$DOCKER_USER/discordbot:latest"
+
 build:
   stage: build
   script:
-    - echo "Controleren of Docker Daemon via DinD bereikbaar is"
-    - docker info       # client zal nu verbinden met tcp://docker:2375
-    - docker build -t "$DOCKER_USER/discordbot:latest" .
-    - docker images
+    - docker info
+    - docker build -t "$IMAGE" .
 
 deploy:
   stage: deploy
@@ -30,4 +17,4 @@ deploy:
     - main
   script:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
-    - docker push "$DOCKER_USER/discordbot:latest"
+    - docker push "$IMAGE"
