--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -1,13 +1,19 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: discord-bot
+#   namespace: flux-system
+# spec:
+#   interval: 5m
+#   path: ./clusters/production/discord-bot
+#   prune: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   validation: client
+
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: discord-bot
-  namespace: flux-system
-spec:
-  interval: 5m
-  path: ./clusters/production/discord-bot
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  validation: client
+resources:
+- deployment.yaml
+- service.yaml
