--- a/clusters/production/discord-bot/deployment.yaml
+++ b/clusters/production/discord-bot/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: discord-bot
-          image: ghcr.io/zierick03/discordbot-jumptechit:latest
+          image: ghcr.io/zierick03/discordbot:latest
           imagePullPolicy: Always
           env:
             - name: DISCORD_TOKEN
