--- a/clusters/production/discord-bot/deployment.yaml
+++ b/clusters/production/discord-bot/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: discord-bot
-          image: ghcr.io/zierick03/discordbot-jumptechit:latest
+          image: zierick03/discordbot:latest  # exact wat op Docker Hub staat
           imagePullPolicy: Always
           env:
             - name: DISCORD_TOKEN
@@ -24,18 +24,57 @@ spec:
                   name: discord-bot-secret
                   key: token
       imagePullSecrets:
-        - name: ghcr-secret
-      # affinity:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #         - matchExpressions:
-      #             - key: kubernetes.io/hostname
-      #               operator: In
-      #               values:
-      #                 - pp-worker1
-      #                 - pp-worker2
-      #                 - pp-worker4
+        - name: dockerhub-secret
+
+
+
+
+
+
+
+
+
+
+
+
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: discord-bot
+#   namespace: discord-bot
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: discord-bot
+#   template:
+#     metadata:
+#       labels:
+#         app: discord-bot
+#     spec:
+#       containers:
+#         - name: discord-bot
+#           image: ghcr.io/zierick03/discordbot-jumptechit:latest
+#           imagePullPolicy: Always
+#           env:
+#             - name: DISCORD_TOKEN
+#               valueFrom:
+#                 secretKeyRef:
+#                   name: discord-bot-secret
+#                   key: token
+#       imagePullSecrets:
+#         - name: ghcr-secret
+#       # affinity:
+#       #   nodeAffinity:
+#       #     requiredDuringSchedulingIgnoredDuringExecution:
+#       #       nodeSelectorTerms:
+#       #         - matchExpressions:
+#       #             - key: kubernetes.io/hostname
+#       #               operator: In
+#       #               values:
+#       #                 - pp-worker1
+#       #                 - pp-worker2
+#       #                 - pp-worker4
 
 
 
