--- a/clusters/production/discord-bot/kustomization.yaml
+++ b/clusters/production/discord-bot/kustomization.yaml
@@ -2,7 +2,17 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - deployment.yaml
-  - service.yaml   # (als je service hebt)
+
+
+
+
+
+
+# apiVersion: kustomize.config.k8s.io/v1beta1
+# kind: Kustomization
+# resources:
+#   - deployment.yaml
+#   - service.yaml   # (als je service hebt)
 
 
 
