--- a/clusters/production/discord-bot/deployment.yaml
+++ b/clusters/production/discord-bot/deployment.yaml
@@ -1,3 +1,4 @@
+#deploying op pvc
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,20 +14,50 @@ spec:
       labels:
         app: discord-bot
     spec:
-      nodeSelector:
-        kubernetes.io/hostname: pp-worker2
       containers:
-      - name: discord-bot
-        image: zierick03/discordbot:latest
-        imagePullPolicy: Always
-        env:
-          - name: DISCORD_TOKEN
-            valueFrom:
-              secretKeyRef:
-                name: discord-bot-secret
-                key: token
-      imagePullSecrets:
-        - name: dockerhub-secret
+        - name: discord-bot
+          image: jouw-bot-image:latest
+          volumeMounts:
+            - mountPath: /data   # waar de bot zijn bestanden in de container opslaat
+              name: bot-storage
+      volumes:
+        - name: bot-storage
+          persistentVolumeClaim:
+            claimName: bot-pvc
+
+
+
+
+
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: discord-bot
+#   namespace: discord-bot
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: discord-bot
+#   template:
+#     metadata:
+#       labels:
+#         app: discord-bot
+#     spec:
+#       nodeSelector:
+#         kubernetes.io/hostname: pp-worker2
+#       containers:
+#       - name: discord-bot
+#         image: zierick03/discordbot:latest
+#         imagePullPolicy: Always
+#         env:
+#           - name: DISCORD_TOKEN
+#             valueFrom:
+#               secretKeyRef:
+#                 name: discord-bot-secret
+#                 key: token
+#       imagePullSecrets:
+#         - name: dockerhub-secret
 
 
 
