--- a/clusters/production/discord-bot/deployment.yaml
+++ b/clusters/production/discord-bot/deployment.yaml
@@ -29,40 +29,6 @@
 
 
 
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: discord-bot
-#   namespace: discord-bot
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: discord-bot
-#   template:
-#     metadata:
-#       labels:
-#         app: discord-bot
-#     spec:
-#       nodeSelector:
-#         kubernetes.io/hostname: pp-worker2
-#       containers:
-#       - name: discord-bot
-#         image: zierick03/discordbot:latest
-#         imagePullPolicy: Always
-#         env:
-#           - name: DISCORD_TOKEN
-#             valueFrom:
-#               secretKeyRef:
-#                 name: discord-bot-secret
-#                 key: token
-#       imagePullSecrets:
-#         - name: dockerhub-secret
-
-
-
-
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -77,8 +43,9 @@ spec:
     metadata:
       labels:
         app: discord-bot
-        
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: ppworker6
       containers:
       - name: discord-bot
         image: zierick03/discordbot:latest
@@ -91,6 +58,39 @@ spec:
                 key: token
       imagePullSecrets:
         - name: dockerhub-secret
+
+
+
+
+
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: discord-bot
+#   namespace: discord-bot
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: discord-bot
+#   template:
+#     metadata:
+#       labels:
+#         app: discord-bot
+        
+#     spec:
+#       containers:
+#       - name: discord-bot
+#         image: zierick03/discordbot:latest
+#         imagePullPolicy: Always
+#         env:
+#           - name: DISCORD_TOKEN
+#             valueFrom:
+#               secretKeyRef:
+#                 name: discord-bot-secret
+#                 key: token
+#       imagePullSecrets:
+#         - name: dockerhub-secret
 
 
 
